more of the same
continued work on mobile accessibility and contact section. preemptively added a post 1.0.0 todo to the readme

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <section id="projects">
     <h2 class="projects__header">Projects</h2>
     <div class="projects__cards">
-      <p class="projects__construction">This section is under construction -- check back later!</p>
+      <p class="projects__construction">&nbspThis section is under construction -- check back later!&nbsp</p>
     </div> 
   </section>
   <section id="contact">
-    <!--https://tympanus.net/codrops/2013/08/09/building-a-circular-navigation-with-css-transforms/-->
-    
+    <!--https://freefrontend.com/css-circle-menus/-->
+    <h2 class="contact__header">Contact Me</h2>
     <div class="contact__wrapper">
       <ul>
         <li><a href="www.github.com"><span class="contact__wrapper--github">test</span></a></li>
