added logos to contact
added custom logos to contact section. started to attempt recreating the "rainbow"

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <h2 class="contact__header">Contact Me</h2>
     <div class="contact__wrapper">
       <ul>
-        <li><a href="www.github.com"><span class="contact__wrapper--github">test</span></a></li>
-        <li><a href="www.linkedin.com"><span class="contact__wrapper--linkedin">ing</span></a></li>
-        <li><a href="meisatler@gmail.com"><span class="contact__wrapper--email">this</span></a></li>
+        <li><a href="www.github.com"><span class="contact__wrapper--github"><img src="github.png" alt="Link to Github"></span></a></li>
+        <li><a href="www.linkedin.com"><span class="contact__wrapper--linkedin"><img src="linkedin.png" alt="Link to Linkedin"></span></a></li>
+        <li><a href="meisatler@gmail.com"><span class="contact__wrapper--email"><img src="mail.png" alt="Link to E-Mail"></span></a></li>
       </ul>
     </div>
     <div class="contact__overlay"></div>
