--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, intial-scale=1" />
-  <title>iaMMei</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>You lost Mei!</title>
+  <link rel="stylesheet" type="text/css" href="404.css">
 </head>
 
 <body>
-  <h6 class="subheading">The page you are looking for doesn't exist. <a href=index.html>Go home</a> </h6>
+  <h6 class="subheading">The page you are looking for doesn't exist. <a href=index.html>Go home</a></h6>
 </body>
 
 </html>
