--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Mei</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="https://kit.fontawesome.com/ebe6e7ff23.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,8 +25,21 @@
   </section>
   <section id="projects">
     <h2 class="projects__header">Projects</h2>
-    <div class="projects__cards">
-      <p class="projects__construction">&nbspThis section is under construction -- check back later!&nbsp</p>
+    <div class="projects__shelf">
+      <div class="projects__card">
+          <div class="projects__row"><img class="projects__card__img" alt="Work In Progress" src="source/img/cards/wip.png"></img></div>
+          <h3>Work In Progress</h3>
+          <p>My next project is coming soon!</p>
+      </div>
+      <div class="projects__card">
+        <a href="https://github.com/cubedhuang/anime-description-generator">
+        <div class="projects__row"><img alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
+        <h3>Anime Description Generator</a></h3>
+        </a>
+        <p>LLM AI trained to generate anime descriptions</p>
+        <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator"><span class="fa-brands fa-github"></span></a></div>
+      </div>
+      <div class="projects__button"><a href="/projects"><span class="fas fa-angle-right"></span><span class="fas fa-angle-down"></span></a></div>
     </div> 
   </section>
   <section id="contact">
