Added Link Labels
Added link labels to improve accessibility. Also updated todo list

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <p>My next project is coming soon!</p>
       </div>
       <div class="projects__card">
-        <a href="https://github.com/cubedhuang/anime-description-generator">
+        <a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub">
         <div class="projects__row"><img alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
         <h3>Anime Description Generator</a></h3>
         </a>
         <p>LLM AI trained to generate anime descriptions</p>
-        <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator"><span class="fa-brands fa-github"></span></a></div>
+        <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0" aria-label="Project presentation on YouTube"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub"><span class="fa-brands fa-github"></span></a></div>
       </div>
-      <div class="projects__button"><a href="/projects"><span class="fas fa-angle-right"></span><span class="fas fa-angle-down"></span></a></div>
+      <div class="projects__button"><a href="/projects"><span class="fas fa-angle-right" aria-hidden="true"></span><span class="fas fa-angle-down" aria-hidden="true"></span></a></div>
     </div> 
   </section>
   <section id="contact">
