--- a/projects.html
+++ b/projects.html
@@ -19,15 +19,15 @@
         </div>
         <div class="projects__card">
             <div class="projects__row"><img alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
-            <a href="https://github.com/cubedhuang/anime-description-generator"></a><h3>Anime Description Generator</h3></a>
+            <a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub"></a><h3>Anime Description Generator</h3></a>
             <p>LLM AI trained to generate anime descriptions</p>
-            <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator"><span class="fa-brands fa-github"></span></a></div>
+            <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0" aria-label="Project presentation on YouTube"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub"><span class="fa-brands fa-github"></span></a></div>
         </div>
         <div class="projects__card">
             <div class="projects__row"><img alt="IncSkill" src="source/img/cards/incskill.png"></div>
             <h3>IncSkill</a></h3>
             <p>Framework for a private educational website</p>
-            <div class="links"><a href="https://www.youtube.com/watch?v=Ciaz813R2XU"><span class="fa-brands fa-youtube"></span></a></div>
+            <div class="links"><a href="https://www.youtube.com/watch?v=Ciaz813R2XU" aria-label="Project presentation on YouTube"><span class="fa-brands fa-youtube"></span></a></div>
         </div>
     </section>
 
