--- a/404.html
+++ b/404.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, intial-scale=1" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, intial-scale=1"/>
+  <meta name="description" content="A personal portfolio website for Mei Satler that hosts general information, contact information, and information about her projects."/>
   <title>You lost Mei!</title>
   <link rel="stylesheet" type="text/css" href="404.css">
 </head>
