--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="A personal portfolio website for Mei Satler that hosts general information, contact information, and information about her projects."/>
     <title>Mei's Projects</title>
     <link rel="stylesheet" type="text/css" href="projects.css"> 
     <script src="https://kit.fontawesome.com/ebe6e7ff23.js" crossorigin="anonymous"></script>
