--- a/index.html
+++ b/index.html
@@ -28,15 +28,13 @@
     <h2 class="projects__header">Projects</h2>
     <div class="projects__shelf">
       <div class="projects__card">
-          <div class="projects__row"><img class="projects__card__img" alt="Work In Progress" src="source/img/cards/wip.png"></img></div>
+          <div class="projects__row"><img alt="Work In Progress" src="source/img/cards/wip.png"></img></div>
           <h3>Work In Progress</h3>
           <p>My next project is coming soon!</p>
       </div>
       <div class="projects__card">
-        <a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub">
-        <div class="projects__row"><img alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
-        <h3>Anime Description Generator</a></h3>
-        </a>
+        <div class="projects__row"><img class="square" alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
+        <h3>Anime Description Generator</h3>
         <p>LLM AI trained to generate anime descriptions</p>
         <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0" aria-label="Project presentation on YouTube"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub"><span class="fa-brands fa-github"></span></a></div>
       </div>
