--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h3><a href="/" aria-label="Back to Home page"><span class="fas fa-angle-left">Back to Home</span></a></h3>
     <h2>Projects</h2>
     <section>
         <div class="projects__card">
@@ -19,8 +20,8 @@
             <p>My next project is coming soon!</p>
         </div>
         <div class="projects__card">
-            <div class="projects__row"><img alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
-            <a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub"></a><h3>Anime Description Generator</h3></a>
+            <div class="projects__row"><img class="square" alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
+            <h3>Anime Description Generator</h3>
             <p>LLM AI trained to generate anime descriptions</p>
             <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0" aria-label="Project presentation on YouTube"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub"><span class="fa-brands fa-github"></span></a></div>
         </div>
