--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h3><a href="/" aria-label="Back to Home page"><span class="fas fa-angle-left">Back to Home</span></a></h3>
+    <h3><a href="/" aria-label="Back to Home page"><span class="fas fa-angle-left"></span>Back to Home</a></h3>
     <h2>Projects</h2>
     <section>
         <div class="projects__card">
