content, minor functionality
- updated old content
- added new content
- made cards clickable
- made project links open new tabs
- improved card hover animations
- improved breakpoints

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h6 class="subheading">The page you are looking for doesn't exist. <a href=index.html>Go home</a></h6>
+  <h6 class="subheading">The page you are looking for doesn't exist. <a href="/">Go home</a></h6>
 </body>
 
 </html>
