--- a/projects.html
+++ b/projects.html
@@ -20,16 +20,41 @@
             <p>My next project is coming soon!</p>
         </div>
         <div class="projects__card">
-            <div class="projects__row"><img class="square" alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
-            <h3>Anime Description Generator</h3>
-            <p>LLM AI trained to generate anime descriptions</p>
-            <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0" aria-label="Project presentation on YouTube"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub"><span class="fa-brands fa-github"></span></a></div>
+            <a href="https://devpost.com/software/foodhax-isn91e" aria-label="FoodHax on Devpost" target="_blank" rel="noopener noreferrer">
+                <div class="projects__row"><img alt="FoodHax" src="source/img/cards/foodhax.png"></div>
+                <h3>FoodHax</h3>
+            </a>
+            <p>Website integrated with Google Maps API that tracks Pittsburgh food pantry locations and information</p>
+            <p><b>Primary technical focuses:</b> Django, Web App UX/UI, HTML, CSS</p>
+            <div class="links"><a href="https://devpost.com/software/foodhax-isn91e" aria-label="Project presentation on Devpost" target="_blank" rel="noopener noreferrer"><span class="fa-solid fa-comment-dots"></span></a><a href="https://youtu.be/0VUuO0Gu6Lc" aria-label="Project presentation on YouTube" target="_blank" rel="noopener noreferrer"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/m-satler/steelhacksxii" aria-label="Project code on GitHub" target="_blank" rel="noopener noreferrer"><span class="fa-brands fa-github"></span></a></div>
         </div>
         <div class="projects__card">
-            <div class="projects__row"><img alt="IncSkill" src="source/img/cards/incskill.png"></div>
-            <h3>IncSkill</a></h3>
+            <!--<a href="https://www.youtube.com/" aria-label="Ascent on Youtube" target="_blank" rel="noopener noreferrer">-->
+                <div class="projects__row"><img class="square" alt="Ascent Platformer" src="source/img/cards/ascent.jpg"></div>
+                <h3>Ascent: A Platformer Game</h3>
+            <!--</a>-->
+                <p>2D Unity project with infinite, random world generation, a local leaderboard, and custom assets </p>
+            <p><b>Primary technical focuses:</b> C# for Unity</p>
+            <!--Need to clean code and post on itch.io and github-->
+            <div class="links"><!--<a href="https://www.youtube.com/" aria-label="Project presentation on YouTube" target="_blank" rel="noopener noreferrer"><span class="fa-brands fa-youtube"></span></a><a href="www.example.com" aria-label="Project code on GitHub" target="_blank" rel="noopener noreferrer"><span class="fa-brands fa-github"></span></a>--></div> 
+        </div>
+        <div class="projects__card">
+            <a href="https://www.youtube.com/watch?v=Ciaz813R2XU" aria-label="IncSkill on YouTube" target="_blank" rel="noopener noreferrer">
+                <div class="projects__row"><img alt="IncSkill" src="source/img/cards/incskill.png"></div>
+                <h3>IncSkill</a></h3>
+            </a>
             <p>Framework for a private educational website</p>
-            <div class="links"><a href="https://www.youtube.com/watch?v=Ciaz813R2XU" aria-label="Project presentation on YouTube"><span class="fa-brands fa-youtube"></span></a></div>
+            <p><b>Primary technical focuses:</b> Django, Google Cloud Platform, Railway</p>
+            <div class="links"><a href="https://www.youtube.com/watch?v=Ciaz813R2XU" aria-label="Project presentation on YouTube" target="_blank" rel="noopener noreferrer"><span class="fa-brands fa-youtube"></span></a></div>
+        </div>
+        <div class="projects__card">
+            <a href="https://www.youtube.com/watch?v=1GYt8VNfVc0" aria-label="Anime Description Generator on YouTube" target="_blank" rel="noopener noreferrer">
+                <div class="projects__row"><img class="square" alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
+                <h3>Anime Description Generator</h3>
+            </a>
+            <p>GPT-2 model trained to generate anime descriptions</p>
+            <p><b>Primary technical focuses:</b> Pandas (data cleaning), Model fine-tuning</p>
+            <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0" aria-label="Project presentation on YouTube" target="_blank" rel="noopener noreferrer"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub" target="_blank" rel="noopener noreferrer"><span class="fa-brands fa-github"></span></a></div>
         </div>
     </section>
 
