--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       </div>
       <div class="about-card__intro">
         <h1>Hi</h1>
-        <h4>I'm Mei, a teen developer.</h4>
-        <p class="about-card__blurb">I like to experiment with code and do my best to make cool things. My interests include art (traditional, digital, and 3D), video games, biology and chemistry, and, of course, programming.</p>
+        <h4>I'm Mei, a teen developer based in Pittsburgh.</h4>
+        <p class="about-card__blurb">I like to experiment with code and make new things. My professional interests include cybersecurity and accessiblity in web applications. </p>
       </div>
     </div>
   </section>
@@ -32,12 +32,14 @@
           <h3>Work In Progress</h3>
           <p>My next project is coming soon!</p>
       </div>
-      <div class="projects__card">
-        <div class="projects__row"><img class="square" alt="Anime Description Generator" src="source/img/cards/adg.jpg"></div>
-        <h3>Anime Description Generator</h3>
-        <p>LLM AI trained to generate anime descriptions</p>
-        <div class="links"><a href="https://www.youtube.com/watch?v=1GYt8VNfVc0" aria-label="Project presentation on YouTube"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/cubedhuang/anime-description-generator" aria-label="Project code on GitHub"><span class="fa-brands fa-github"></span></a></div>
-      </div>
+        <div class="projects__card">
+          <a href="https://devpost.com/software/foodhax-isn91e" aria-label="FoodHax on Devpost" target="_blank" rel="noopener noreferrer">
+            <div class="projects__row"><img alt="FoodHax" src="source/img/cards/foodhax.png"></div>
+            <h3>FoodHax</h3>
+          </a>
+          <p>A website integrated with Google Maps API that tracks Pittsburgh food pantry locations and information</p>
+          <div class="links"><a href="https://devpost.com/software/foodhax-isn91e" aria-label="Project presentation on Devpost" target="_blank" rel="noopener noreferrer"><span class="fa-solid fa-comment-dots"></span></a><a href="https://youtu.be/0VUuO0Gu6Lc" aria-label="Project presentation on YouTube" target="_blank" rel="noopener noreferrer"><span class="fa-brands fa-youtube"></span></a><a href="https://github.com/m-satler/steelhacksxii" aria-label="Project code on GitHub" target="_blank" rel="noopener noreferrer"><span class="fa-brands fa-github"></span></a></div>
+        </div>
       <div class="projects__button"><a href="/projects"><span class="fas fa-angle-right" aria-hidden="true"></span><span class="fas fa-angle-down" aria-hidden="true"></span></a></div>
     </div> 
   </section>
